@@ -1,0 +1,265 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "CN Blue \u56de\u6b78\u521d\u5fc3\uff01\u7b2c 10 \u5f35\u8ff7\u4f60\u5c08\u8f2f\u300aX\u300b\u5f37\u8abf\u7d14\u7cb9\u6a02\u5668\u8072\u97f3\uff0c\u6a02\u5718\u9818\u8896\u912d\u5bb9\u548c\uff1a\u6211\u5011\u8981\u505a\u771f\u6b63\u7684\u6a02\u5718", "description": "CN Blue \u56de\u6b78\u521d\u5fc3\uff01\u7b2c 10 \u5f35\u8ff7\u4f60\u5c08\u8f2f\u300aX\u300b\u5f37\u8abf\u7d14\u7cb9\u6a02\u5668\u8072\u97f3\uff0c\u6a02\u5718\u9818\u8896\u912d\u5bb9\u548c\uff1a\u6211\u5011\u8981\u505a\u771f\u6b63\u7684\u6a02\u5718", "url": "https://www.famechos.me/news/CN Blue \u56de\u6b78\u521d\u5fc3\uff01\u7b2c 10 \u5f35\u8ff7\u4f60\u5c08\u8f2f\u300aX\u300b\u5f37\u8abf\u7d14\u7cb9\u6a02\u5668\u8072\u97f3\uff0c\u6a02\u5718\u9818\u8896\u912d\u5bb9\u548c\uff1a\u6211\u5011\u8981\u505a\u771f\u6b63\u7684\u6a02\u5718.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T15:29:55.873666+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團.html"/>
+<meta name="description" content="CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和分享樂團理念。">
+<meta name="keywords" content="CN Blue, 鄭容和, 迷你專輯, 樂團, 純粹樂器聲音, 樂團領袖, 韓國樂團, K-POP">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團.html" />
+        <meta property="og:title" content="CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團" />
+        <meta property="og:description" content="CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團" />
+        <meta property="twitter:description" content="CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>CN Blue 出道已經 14 年，但今年對他們來說是「另一個開始」。樂團的第 10 張迷你專輯《X》是他們沉思後的作品，回歸到「純粹的樂器聲音和原始音樂」。</p>
+<p>樂團領袖兼主唱鄭容和（Yong-hwa）表示，每次發行新專輯，他都會感到緊張和興奮，就像樂團剛出道時一樣。他仍然感受到內心的火焰，驅使他創作出更好的音樂。</p>
+<p>鄭容和回憶最近觀看嗆辣紅椒（Red Hot Chili Peppers）演唱會的經驗，整場表演只有樂器聲音，沒有其他聲音來源，但表演卻不會令人感到無聊。这讓他想到，「是的，這就是本質。」</p>
+<p>因此，專輯《X》專注於樂團音樂的本質，強調樂器聲音，目的是要達到原始的感覺。樂團成員解釋，這張專輯是他們三年來的第一張作品，回歸到「純粹的樂器聲音和原始音樂」。</p>
+<p>在只在海外演出多年後，樂團去年在首爾舉辦了六年來的第一場演唱會，並開始在大學音樂節和其他活動中演出。三人組表示，他們最近的音樂節經驗讓他們深入思考樂團音樂的本質。</p>
+<p>鼓手姜敏赫（Min-hyuk）說：「在與其他樂團一起參加搖滾音樂節時，我們有時會故意簡化聲音，放大原始樂器聲音。我們一直在討論是否應該在每場表演和專輯中添加或刪除聲音。」</p>
+<p>樂團成員對於最近韓國的「樂團熱潮」感到高興，許多樂團的人氣正在上升；他們有信心在其中脫穎而出。</p><h2>CN Blue樂團：隨著人們對樂團音樂的理解增加，我們必須作為真正的樂團生存</h2>
+<p>CN Blue樂團成員鄭容和表示，隨著人們對樂團音樂的理解增加，真實和虛假的區別將變得更加明顯。他相信，CN Blue樂團有信心成為真正的樂團。</p>
+<p>鄭容和還提到，CN Blue是韓國演出最多場次的樂團之一。他們擁有許多經驗，特別是作為第一個進行世界巡演的韓國樂團。</p>
+<p>貝斯手李正信（Jung-shin）表示，他仍在觀察其他樂團的表演並學習。他們最近一起去看了日本樂團Uverworld的演唱會，學到了很多東西。從背景影片到入口和曲目安排，都讓他思考了很多事情。</p>
+<p>姜敏赫表示，雖然這是他們的第10張迷你專輯，但CN Blue的音樂仍處於巔峰。他認為，這張專輯感覺像是我們音樂的巔峰。它是一個開始，也是年輕。CN Blue仍然有很多東西要展示。</p>
+<p>CN Blue將在明年慶祝出道15週年，今年3月至8月舉辦了七年來的第一次亞洲巡演。9月底，樂團在首爾SK奧林匹克手球館舉辦了一場演唱會。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/UJ0lT3m0jhE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/SEVENTEEN世界巡迴演唱會「Right Here」首站高陽體育場盛大開幕 5萬8千名粉絲齊聚一堂.html">SEVENTEEN世界巡迴演唱會「Right Here」首站高陽體育場盛大開幕 5萬8千名粉絲齊聚一堂</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/諾貝爾文學獎得主韓江：獲獎後的心路歷程與未來寫作計畫.html">諾貝爾文學獎得主韓江：獲獎後的心路歷程與未來寫作計畫</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/閔熙珍逆轉勝！再度當選ADOR董事，與海譜爭議未了.html">閔熙珍逆轉勝！再度當選ADOR董事，與海譜爭議未了</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
