@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 22 Oct 2024 15:27:46 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 22 Oct 2024 15:30:02 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -369,5 +369,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>BTS成員鄭號錫完成18個月兵役。。韓國流行音樂超級組合BTS成員鄭號錫今天完成18個月的兵役，成為繼金碩珍之後第二位完成兵役的成員。。...</description>
   <category>K-Pop</category>
   <pubDate>Tue, 22 Oct 2024 15:27:46 +0800</pubDate>
+</item><item>
+  <title>CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團</title>
+  <link>https://www.famechos.me/news/CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團.html</link>
+  <description>CN Blue 回歸純粹的樂團聲音，發行第 10 張迷你專輯《X》...</description>
+  <category>K-Pop</category>
+  <pubDate>Tue, 22 Oct 2024 15:30:02 +0800</pubDate>
 </item></channel>
 </rss>
