@@ -368,4 +368,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T15:30:02+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
