@@ -55,3 +55,4 @@ https://www.koreaherald.com/view.php?ud=20241020050138
 https://www.koreaherald.com/view.php?ud=20241014050581
 https://en.yna.co.kr/view/AEN20241017009151315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241017007600315?section=culture/k-pop&input=rss
+https://en.yna.co.kr/view/AEN20241017001051315?section=culture/k-pop&input=rss
